@@ -1,38 +1,47 @@
-import scala.util.Try
-import scala.sys.process._
+import com.gu.riffraff.artifact.BuildInfo
 
 val enumeratumVersion = "1.6.1"
-val enumeratumPlayVersion = "1.6.1"
 val jacksonVersion = "2.10.5"
 val logstashLogbackVersion = "6.4"
 val awsSdkVersion = "1.11.851"
 
-val buildInfo = Seq(
-  buildInfoPackage := "recipes",
-  buildInfoKeys := Seq[BuildInfoKey](
-    name,
-    BuildInfoKey.sbtbuildinfoConstantEntry(("gitCommitId", Option(System.getenv("BUILD_VCS_NUMBER")).getOrElse(
-      Try("git rev-parse HEAD".!!.trim).getOrElse("unknown")
-    ))),
-  ),
-  buildInfoOptions:= Seq(
-    BuildInfoOption.Traits("management.BuildInfo"),
-    BuildInfoOption.ToJson
-  )
-)
-
 lazy val root = (project in file("."))
-  .enablePlugins(PlayScala, BuildInfoPlugin)
-  .settings(buildInfo ++ Seq(
+  .enablePlugins(PlayScala, RiffRaffArtifact, JDebPackaging, SystemdPlugin, BuildInfoPlugin)
+  .settings(Seq(
     name := """recipes""",
     version := "1.0-SNAPSHOT",
     scalaVersion := "2.13.1",
+
     PlayKeys.playDefaultPort := 9090,
+
+    riffRaffArtifactResources := Seq(
+      (packageBin in Debian).value -> s"${name.value}/${name.value}.deb",
+      baseDirectory.value / "riff-raff.yaml" -> "riff-raff.yaml",
+      baseDirectory.value / "cloudformation.yaml" -> "cloudformation/recipes.cfn.yaml"
+    ),
+
+    buildInfoPackage := "recipes",
+    buildInfoKeys := {
+      lazy val buildInfo = BuildInfo(baseDirectory.value)
+      Seq[BuildInfoKey](
+        BuildInfoKey.sbtbuildinfoConstantEntry("buildNumber", buildInfo.buildIdentifier),
+        // so this next one is constant to avoid it always recompiling on dev machines.
+        // we only really care about build time on teamcity, when a constant based on when
+        // it was loaded is just fine
+        BuildInfoKey.sbtbuildinfoConstantEntry("buildTime", System.currentTimeMillis),
+        BuildInfoKey.sbtbuildinfoConstantEntry("gitCommitId", buildInfo.revision)
+      )
+    },
+    buildInfoOptions:= Seq(
+      BuildInfoOption.Traits("management.BuildInfo"),
+      BuildInfoOption.ToJson
+    ),
+
     libraryDependencies ++= Seq(
       ws,
       "org.scalatestplus.play" %% "scalatestplus-play" % "5.0.0" % Test,
       "com.beachape" %% "enumeratum" % enumeratumVersion,
-      "com.beachape" %% "enumeratum-play" % enumeratumPlayVersion,
+      "com.beachape" %% "enumeratum-play" % enumeratumVersion,
       "com.fasterxml.jackson.core" % "jackson-databind" % jacksonVersion,
 
       // logstash-logback-encoder brings in version 2.11.0
@@ -49,6 +58,17 @@ lazy val root = (project in file("."))
       "-feature",
       "-unchecked",
       "-Xfatal-warnings"
+    ),
+    javaOptions in Universal ++= Seq(
+      s"-Dpidfile.path=/dev/null",
+      "-J-XX:MaxRAMFraction=2",
+      "-J-XX:InitialRAMFraction=2",
+      "-J-XX:MaxMetaspaceSize=300m",
+      "-J-XX:+PrintGCDetails",
+      "-J-XX:+PrintGCDateStamps",
+      s"-J-Dlogs.home=/var/log/${packageName.value}",
+      s"-J-Xloggc:/var/log/${packageName.value}/gc.log",
+      "-Dconfig.file=/etc/gu/recipes.conf"
     ),
     javaOptions in Test += "-Dconfig.file=conf/application.test.conf"
   ))
